--- a/index.css
+++ b/index.css
@@ -21,5 +21,10 @@
     font-family: 'Lato', sans-serif;;
     font-weight: bold;
     font-size: 18px;
-    margin-top: 20px;
+}
+
+#strictSelect{
+    display: none;
+    width: fit-content;
+    margin-left: 30px;
 }
