--- a/index.css
+++ b/index.css
@@ -28,3 +28,9 @@
     width: fit-content;
     margin-left: 30px;
 }
+
+#resultBox{
+    height: 300px;
+    border: 1px solid red;
+    width: max-content;
+}
