--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@
 }
 
 .slot1{      
-    display: none;
+    display: block;
     margin:auto;   
     text-align: center;
     background-color:rgb(0, 100, 255);
